# test_for_OneScreenDI

./: .gitignore  README.md  pyproject.toml
1_task/: READMY.md  pars_json.py  pydantic_model.py
1_task/begin_and_result_file/: result_of_json.csv
2_and_3_task/: .env.template  README_FOR_TASK_2.md  README_FOR_TASK_3.md  sql_processor.py  task_2.py  task_3.py
2_and_3_task/files_for_3_task/: df.csv
4_task/: README.md  main.py
